--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "gatsby": "^1.9.243",
+    "gatsby-image": "^1.0.43",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-feed": "^1.3.20",
