update media library

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,3 +21,9 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
+
+media_library:
+  name: cloudinary
+  config:
+    cloud_name: davkbtsa4
+    api_key: 153758269172829
